Inleiding Programmeren/Huistaak 1 Hello World/Oplossingen/DePreter.Jonas _error.txt
  File "/home/luc/Documents/sortmafiles/Inleiding Programmeren/Huistaak 1 Hello World/DePreter.Jonas/extra.py", line 2
    
                        ^
SyntaxError: invalid syntax
